# gcode-documentation-parser

./: .pre-commit-config.yaml  README.md  mise.toml  publish_output.sh  pyproject.toml
.github/workflows/: ci.yml  publish_output.yml
gcode_documentation_parser/: updater.py
output/: all_codes.json  all_codes_const.js  all_codes_export.js  all_codes_window.js
