[project]
name = "gcode-documentation-parser"
version = "0.1.0"
description = "A utility that parses the documentation pages from Marlin, RepRap, and Klipper, to generate an index of commands usage"
authors = [
  { name = "Costas Basdekis", email = "code@basdekis.io" },
  { name = "Thomas Nemer", email = "atom@fortytwo.fr" },

]
readme = "README.md"
license = "MIT"
keywords = [
    "gcode",
    "marlin",
    "reprap",
    "klipper",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Topic :: Documentation",
]
dependencies = [
    "beautifulsoup4",
    "wikitextparser",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/thomasnemer/gcode-documentation-parser"
Repository = "https://github.com/thomasnemr/gcode-documentation-parser"
Documentation = "https://github.com/thomasnemer/gcode-documentation-parser"

[dependency-groups]
dev = [
    "ipdb",
    "ipython",
    "moto",
    "mypy",
    "pycodestyle",
    "pylint",
    "pyyaml",
    "pytest",
    "pytest-env",
    "python-dotenv",
    "types-beautifulsoup4",
    "types-six",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
disable_error_code = "misc"
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "wikitextparser.*"
ignore_missing_imports = true

[tool.pylint.messages_control]
extension-pkg-whitelist = "pydantic"
max-line-length = 88
disable = """,
    too-few-public-methods,
    fixme,
    missing-module-docstring,
    invalid-name,
    unspecified-encoding,
    f-string-without-interpolation,
    no-else-return,
    redefined-argument-from-local,
    wrong-import-order,
    """
score = "no"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--doctest-modules",
    "--doctest-continue-on-failure",
    # Ignore non-code folders
    "--ignore=docs",
    "--ignore=venv",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]
pythonpath = "gcode_documentation_parser"
